--- a/about.html
+++ b/about.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/d4a5cee346.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -110,6 +120,26 @@
       <a href="mailto:gorzynska.kat@gmail.com" class="email-link">
         gorzynska.kat@gmail.com
       </a>
+    </div>
+    <div class="container text-center">
+      <div class="row justify-content-md-center">
+        <div class="col col-lg-2">
+          <i class="fa-brands fa-instagram"></i>
+          <a href="https://github.com/katgorzynska">Instagram</a>
+        </div>
+        <div class="col col-lg-2">
+          <i class="fa-brands fa-linkedin"></i
+          ><a
+            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+          >
+            LinkedIn</a
+          >
+        </div>
+        <div class="col col-lg-2">
+          <i class="fa-brands fa-github"></i>
+          <a href="https://github.com/katgorzynska">GitHub</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
