--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
     />
     <title>Front-end developer - Kat Górzyńska</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
