Re-worked the homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
     />
     <title>Front-end developer - Kat Górzyńska</title>
+    <script
+      src="https://kit.fontawesome.com/9f10794047.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -73,19 +77,18 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Kat Górzyńska</h1>
-    <h3 class="text-center mt-3">Front-end developer, based in The Hague</h3>
-    <div class="navigation-links mb-5">
-      <a
-        href="about.html#contact"
-        class="primary-link"
-        title="Contact Kat Górzyńska"
-        >Contact me</a
-      >
-      <a href="about.html" class="secondary-link" title="About Kat Górzyńska"
-        >About me</a
-      >
+    <div class="hero">
+      <h2 class="text-center">👋 Hi I am</h2>
+      <h1 class="text-center">Kat Górzyńska</h1>
+      <h3 class="text-center mt-3">Front-end developer, based in The Hague</h3>
+      <div class="navigation-links mb-5">
+        <a
+          href="about.html#contact"
+          class="btn btn-branding"
+          title="Contact Kat Górzyńska"
+          >Contact me</a
+        >
+      </div>
     </div>
     <div class="container">
       <div class="row">
