Re-worked the buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga project"
+            <a href="#" class="btn-branding" title="Yoga project"
               >Launch Yoga App</a
             >
           </div>
@@ -124,7 +124,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Weather project"
+            <a href="#" class="btn-branding" title="Weather project"
               >Launch Weather App</a
             >
           </div>
@@ -154,7 +154,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yogurt project"
+            <a href="#" class="btn-branding" title="Yogurt project"
               >Launch Yogurt App</a
             >
           </div>
