Re-worked the homepage

--- a/about.html
+++ b/about.html
@@ -94,9 +94,9 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="src/yoga.png"
+            src="src/yogurt.png"
             class="img-fluid p-2 mb-4 shadow rounded"
-            alt="Yoga project"
+            alt="Yogurt project"
           />
         </div>
         <div class="col-sm-4">
@@ -108,9 +108,9 @@
         </div>
         <div class="col-sm-4">
           <img
-            src="src/yogurt.png"
+            src="src/dictionary.png"
             class="img-fluid p-2 mb-4 shadow rounded"
-            alt="Yogurt project"
+            alt="Dictionary project"
           />
         </div>
       </div>
