--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       </div>
     </nav>
     <div class="hero">
-      <h2 class="text-center">👋 Hi I am</h2>
-      <h1 class="text-center">Kat Górzyńska</h1>
-      <h3 class="text-center mt-3">Front-end developer, based in The Hague</h3>
+      <h2>👋 Hi I am</h2>
+      <h1>Kat Górzyńska</h1>
+      <h3>Front-end developer, based in The Hague</h3>
       <div class="navigation-links mb-5">
         <a
           href="about.html#contact"
@@ -90,72 +90,76 @@
         >
       </div>
     </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
     <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="src/yogurt.png" class="img-fluid" alt="Yogurt project" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt app</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a
+                href="#"
+                class="btn btn-branding-outline"
+                title="Yogurt project"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather app</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+
+            <a href="#" class="btn btn-branding-outline" title="Weather project"
+              >Learn more</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="src/weather.png" class="img-fluid" alt="Weather project" />
+        </div>
+      </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col d-none d-lg-block">
           <img
-            src="src/yoga.png"
-            alt="Yoga project"
-            class="img-fluid rounded d-none d-sm-block"
+            src="src/dictionary.png"
+            alt="Dictionary project"
+            class="img-fluid"
           />
         </div>
-        <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="btn-branding" title="Yoga project"
-              >Launch Yoga App</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-sm-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="btn-branding" title="Weather project"
-              >Launch Weather App</a
-            >
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="src/weather.png"
-            class="img-fluid rounded d-none d-sm-block"
-            alt="Weather project"
-          />
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img
-            src="src/yogurt.png"
-            class="img-fluid rounded d-none d-sm-block"
-            alt="Yogurt project"
-          />
-        </div>
-        <div class="col-sm-6">
-          <h2 class="mb-3">Yogurt app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="btn-branding" title="Yogurt project"
-              >Launch Yogurt App</a
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary app</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="#"
+              class="btn btn-branding-outline"
+              title="Dictionary project"
+              >Learn more</a
             >
           </div>
         </div>
