Re-worked the links

--- a/about.html
+++ b/about.html
@@ -125,19 +125,20 @@
       <div class="row justify-content-md-center">
         <div class="col col-lg-2">
           <i class="fa-brands fa-instagram"></i>
-          <a href="https://github.com/katgorzynska">Instagram</a>
+          <a href="https://github.com/katgorzynska" class="social">Instagram</a>
         </div>
         <div class="col col-lg-2">
           <i class="fa-brands fa-linkedin"></i
           ><a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            class="social"
           >
             LinkedIn</a
           >
         </div>
         <div class="col col-lg-2">
           <i class="fa-brands fa-github"></i>
-          <a href="https://github.com/katgorzynska">GitHub</a>
+          <a href="https://github.com/katgorzynska" class="social">GitHub</a>
         </div>
       </div>
     </div>
