Re-worked the About me page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="strict-origin" />
     <meta
       name="description"
       content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
     />
     <title>Front-end developer - Kat Górzyńska</title>
     <script
-      src="https://kit.fontawesome.com/9f10794047.js"
+      src="https://kit.fontawesome.com/11d521db01.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -62,7 +63,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="About Kat Górzyńska"
-                >About me</a
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html" title="Contact Kat Górzyńska"
+                >Work</a
               >
             </li>
             <li class="nav-item">
@@ -70,7 +76,7 @@
                 class="nav-link"
                 href="about.html#contact"
                 title="Contact Kat Górzyńska"
-                >Contact me</a
+                >Contact</a
               >
             </li>
           </ul>
@@ -90,9 +96,7 @@
         >
       </div>
     </div>
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
+    <p class="text-center m-5">Featured projects - my best projects to show</p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
