--- a/about.html
+++ b/about.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="strict-origin" />
+    <meta
+      name="description"
+      content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
+    />
+    <title>About me - Kat Górzyńska</title>
     <script
-      src="https://kit.fontawesome.com/d4a5cee346.js"
+      src="https://kit.fontawesome.com/11d521db01.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,11 +32,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>About me - Kat Górzyńska</title>
-    <meta
-      name="description"
-      content="About Kat Górzyńska, a front-end developer based in The Hague"
-    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -65,80 +66,47 @@
                 class="nav-link active"
                 href="about.html"
                 title="About Kat Górzyńska"
-                >About me</a
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html" title="Contact Kat Górzyńska"
+                >Work</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html#contact"
+                href="contact.html"
                 title="Contact Kat Górzyńska"
-                >Contact me</a
+                >Contact</a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from The Hague</h3>
-    <div class="about-paragraphs text-center">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-    </div>
-    <div class="container">
+    <div class="about-section container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+          <h1 class="mb-4">Hi! 👋 I am </br>Kat Górzyńska</h1>
+          <h2 class="mb-5">Front-end developer from The Hague</h2>
+                      <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+              qui alias veniam excepturi rem dolor fugit dignissimos, sed
+              voluptatum blanditiis harum.
+            </p>
+          <a href="" class="btn btn-branding">See my projects</a>
+        </div>
+        </div>
+        <div class="col-lg-6">
           <img
-            src="src/yogurt.png"
-            class="img-fluid p-2 mb-4 shadow rounded"
-            alt="Yogurt project"
+            src="src/kat.jpg"
+            class="img-fluid rounded"
+            alt="a picture of a blue haired woman"
           />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="src/weather.png"
-            class="img-fluid p-2 mb-4 shadow rounded"
-            alt="Weather project"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="src/dictionary.png"
-            class="img-fluid p-2 mb-4 shadow rounded"
-            alt="Dictionary project"
-          />
-        </div>
-      </div>
-    </div>
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:gorzynska.kat@gmail.com" class="email-link">
-        gorzynska.kat@gmail.com
-      </a>
-    </div>
-    <div class="container text-center">
-      <div class="row justify-content-md-center">
-        <div class="col col-lg-2">
-          <i class="fa-brands fa-instagram"></i>
-          <a href="https://github.com/katgorzynska" class="social">Instagram</a>
-        </div>
-        <div class="col col-lg-2">
-          <i class="fa-brands fa-linkedin"></i
-          ><a
-            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
-            class="social"
-          >
-            LinkedIn</a
-          >
-        </div>
-        <div class="col col-lg-2">
-          <i class="fa-brands fa-github"></i>
-          <a href="https://github.com/katgorzynska" class="social">GitHub</a>
         </div>
       </div>
     </div>
