Added the Work section

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="Contact Kat Górzyńska"
+              <a class="nav-link" href="work.html" title="Work by Kat Górzyńska"
                 >Work</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html#contact"
+                href="contact.html"
                 title="Contact Kat Górzyńska"
                 >Contact</a
               >
@@ -89,7 +89,7 @@
       <h3>Front-end developer, based in The Hague</h3>
       <div class="navigation-links mb-5">
         <a
-          href="about.html#contact"
+          href="contact.html"
           class="btn btn-branding"
           title="Contact Kat Górzyńska"
           >Contact me</a
