--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 >Home</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a
                 class="nav-link active"
                 href="about.html"
@@ -70,7 +70,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="Contact Kat Górzyńska"
+              <a class="nav-link" href="work.html" title="Work by Kat Górzyńska"
                 >Work</a
               >
             </li>
@@ -86,10 +86,10 @@
         </div>
       </div>
     </nav>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
           <h1 class="mb-4">Hi! 👋 I am </br>Kat Górzyńska</h1>
           <h2 class="mb-5">Front-end developer from The Hague</h2>
                       <p class="mb-5">
