--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,55 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Kat Górzyńska</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html" title="About Kat Górzyńska"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html" title="Work by Kat Górzyńska"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="contact.html"
+                title="Contact Kat Górzyńska"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
       <a href="mailto:gorzynska.kat@gmail.com" class="email-link">
