--- a/work.html
+++ b/work.html
@@ -5,13 +5,14 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="referrer" content="strict-origin" />
       <meta
         name="description"
         content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
       />
       <title>Front-end developer - Kat Górzyńska</title>
       <script
-        src="https://kit.fontawesome.com/9f10794047.js"
+        src="https://kit.fontawesome.com/11d521db01.js"
         crossorigin="anonymous"
       ></script>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,5 +35,87 @@
       <link rel="stylesheet" href="src/style.css" />
     </head>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Kat Górzyńska</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html" title="About Kat Górzyńska"
+                >About</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="work.html"
+                title="Work by Kat Górzyńska"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="contact.html"
+                title="Contact Kat Górzyńska"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="src/yogurt.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Yogurt project</h3>
+            <p class="text-center">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6">
+            <img src="src/weather.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center">Built with HTML, CSS and JavaScript</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="src/dictionary.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Dictionary</h3>
+            <p class="text-center">Built with HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6">
+            <img src="src/translation.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center">Built with HTML, CSS and React</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
