--- a/contact.html
+++ b/contact.html
@@ -83,19 +83,27 @@
         </div>
       </div>
     </nav>
-    <div class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:gorzynska.kat@gmail.com" class="email-link">
-        gorzynska.kat@gmail.com
-      </a>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <div class="mt-5">
+          <h2 class="text-center">📮 Contact me</h2>
+        </div>
+      </div>
     </div>
     <div class="container text-center">
       <div class="row justify-content-md-center">
-        <div class="col col-lg-2">
+        <div class="col col-lg-3">
+          <i class="fa-regular fa-envelope"></i>
+          <a href="mailto:gorzynska.kat@gmail.com" class="social"
+            >gorzynska.kat@gmail.com</a
+          >
+        </div>
+        <div class="col col-lg-3">
           <i class="fa-brands fa-instagram"></i>
           <a href="https://github.com/katgorzynska" class="social">Instagram</a>
         </div>
-        <div class="col col-lg-2">
+        <div class="col col-lg-3">
           <i class="fa-brands fa-linkedin"></i
           ><a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
@@ -104,7 +112,7 @@
             LinkedIn</a
           >
         </div>
-        <div class="col col-lg-2">
+        <div class="col col-lg-3">
           <i class="fa-brands fa-github"></i>
           <a href="https://github.com/katgorzynska" class="social">GitHub</a>
         </div>
