--- a/about.html
+++ b/about.html
@@ -90,16 +90,16 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-          <h1 class="mb-4">Hi! 👋 I am </br>Kat Górzyńska</h1>
-          <h2 class="mb-5">Front-end developer from The Hague</h2>
-                      <p class="mb-5">
+            <h1 class="mb-4">Hi! 👋 I am <br />Kat Górzyńska</h1>
+            <h2 class="mb-5">Front-end developer from The Hague</h2>
+            <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
               aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
               qui alias veniam excepturi rem dolor fugit dignissimos, sed
               voluptatum blanditiis harum.
             </p>
-          <a href="" class="btn btn-branding">See my projects</a>
-        </div>
+            <a href="work.html" class="btn btn-branding">See my projects</a>
+          </div>
         </div>
         <div class="col-lg-6">
           <img
