--- a/contact.html
+++ b/contact.html
@@ -101,12 +101,18 @@
         </div>
         <div class="col col-lg-3">
           <i class="fa-brands fa-instagram"></i>
-          <a href="https://github.com/katgorzynska" class="social">Instagram</a>
+          <a
+            href="https://www.instagram.com/kittyjagger/"
+            target="”_blank”"
+            class="social"
+            >Instagram</a
+          >
         </div>
         <div class="col col-lg-3">
           <i class="fa-brands fa-linkedin"></i
           ><a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            target="”_blank”"
             class="social"
           >
             LinkedIn</a
@@ -114,7 +120,12 @@
         </div>
         <div class="col col-lg-3">
           <i class="fa-brands fa-github"></i>
-          <a href="https://github.com/katgorzynska" class="social">GitHub</a>
+          <a
+            href="https://github.com/katgorzynska"
+            target="”_blank”"
+            class="social"
+            >GitHub</a
+          >
         </div>
       </div>
     </div>
