--- a/work.html
+++ b/work.html
@@ -36,58 +36,36 @@
     </head>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html" title="Homepage"
-          >Kat Górzyńska</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="index.html"
-                title="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About Kat Górzyńska"
-                >About</a
-              >
-            </li>
-            <li class="nav-item active">
-              <a
-                class="nav-link active"
-                href="work.html"
-                title="Work by Kat Górzyńska"
-                >Work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="contact.html"
-                title="Contact Kat Górzyńska"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="src/logo.png"
+            class="logo d-none d-md-block"
+            alt="logo of SheCodes"
+          />
+          <img
+            src="src/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="small version of the SheCodes logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li class="active">
+            <a href="work.html">Work</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -116,6 +94,37 @@
           </div>
         </div>
       </div>
+    </div>
+    <div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4 class="mb-2">Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:gorzynska.kat@gmail.com" class="email-link"
+            >gorzynska.kat@gmail.com</a
+          >
+        </div>
+        <div class="social d-flex justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/katgorzynska" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/kittyjagger/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
