Re-worked the footer, added SEO

--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <meta name="referrer" content="strict-origin" />
     <meta
       name="description"
-      content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
+      content="Contact Kat Górzyńska who is a front-end developer in training, check out her projects and contact her for job inquiries"
     />
-    <title>Front-end developer - Kat Górzyńska</title>
+    <title>Contact Kat Górzyńska</title>
     <script
       src="https://kit.fontawesome.com/11d521db01.js"
       crossorigin="anonymous"
@@ -36,7 +36,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="src/logo.png"
             class="logo d-none d-md-block"
@@ -50,16 +50,16 @@
         </a>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="about.html" title="About Kat Górzyńska">About</a>
           </li>
           <li>
-            <a href="work.html">Work</a>
+            <a href="work.html" title="Kat Górzyńska's work">Work</a>
           </li>
           <li class="active">
-            <a href="contact.html">Contact</a>
+            <a href="contact.html" title="Contact Kat Górzyńska">Contact</a>
           </li>
         </ul>
       </nav>
@@ -69,7 +69,48 @@
         <h1 class="mb-5">Let's get in touch!</h1>
       </div>
     </div>
-    <div>
+    <div class="container">
+      <div class="justify-content-md-center">
+        <ul>
+          <li>
+          <i class="fa-regular fa-envelope"></i>
+          <a href="mailto:gorzynska.kat@gmail.com" class="social"
+            >gorzynska.kat@gmail.com</a
+          >
+          </li>
+        <li>
+          <i class="fa-brands fa-linkedin"></i
+          ><a
+            href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
+            target="”_blank”"
+            class="social"
+          >
+            LinkedIn</a
+          >
+          </li>
+                    <li>
+          <i class="fa-brands fa-github"></i>
+          <a
+            href="https://github.com/katgorzynska"
+            target="”_blank”"
+            class="social"
+            >GitHub</a
+          >
+                    </li>
+        <li>
+          <i class="fa-brands fa-instagram"></i>
+          <a
+            href="https://www.instagram.com/kittyjagger/"
+            target="”_blank”"
+            class="social"
+            >Instagram</a
+          >
+        </li>
+        </div>
+      </div>
+    </ul>
+    </div>
+    <div class="container">
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
@@ -77,11 +118,19 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a
+              href="contact.html"
+              class="btn btn-branding"
+              title="Contact Kat Górzyńska"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:gorzynska.kat@gmail.com" class="email-link"
+          <a
+            href="mailto:gorzynska.kat@gmail.com"
+            class="email-link"
+            title="Email Kat Górzyńska"
             >gorzynska.kat@gmail.com</a
           >
         </div>
@@ -89,15 +138,30 @@
           <a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="https://github.com/katgorzynska" target="_blank"
+          <a
+            href="https://github.com/katgorzynska"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/kittyjagger/" target="_blank"
+          <a
+            href="https://www.instagram.com/kittyjagger/"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Kat Górzyńska and it is
+          <a
+            href="https://github.com/katgorzynska/portfolio-project"
+            targer="_blank"
+            >open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
