--- a/work.html
+++ b/work.html
@@ -8,9 +8,9 @@
       <meta name="referrer" content="strict-origin" />
       <meta
         name="description"
-        content="Kat Górzyńska is a front-end developer in training, check out her projects and contact her for job inquiries"
+        content="The work of Kat Górzyńska who is a front-end developer in training, check out her projects and contact her for job inquiries"
       />
-      <title>Front-end developer - Kat Górzyńska</title>
+      <title>Work of Kat Górzyńska</title>
       <script
         src="https://kit.fontawesome.com/11d521db01.js"
         crossorigin="anonymous"
@@ -38,7 +38,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="src/logo.png"
             class="logo d-none d-md-block"
@@ -52,16 +52,16 @@
         </a>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="about.html" title="About Kat Górzyńska">About</a>
           </li>
           <li class="active">
-            <a href="work.html">Work</a>
+            <a href="work.html" title="Kat Górzyńska's work">Work</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html" title="Contact Kat Górzyńska">Contact</a>
           </li>
         </ul>
       </nav>
@@ -71,31 +71,47 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="src/yogurt.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="src/yogurt.png"
+              class="img-fluid mb-3"
+              alt="Yogurt project"
+            />
             <h3 class="text-center m-0">Yogurt project</h3>
             <p class="text-center">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6">
-            <img src="src/weather.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="src/weather.png"
+              class="img-fluid mb-3"
+              alt="Weather App"
+            />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center">Built with HTML, CSS and JavaScript</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <img src="src/dictionary.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="src/dictionary.png"
+              class="img-fluid mb-3"
+              alt="Dictionary project"
+            />
             <h3 class="text-center m-0">Dictionary</h3>
             <p class="text-center">Built with HTML, CSS and React</p>
           </div>
           <div class="col-md-6">
-            <img src="src/translation.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="src/translation.png"
+              class="img-fluid mb-3"
+              alt="Translation project"
+            />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center">Built with HTML, CSS and React</p>
           </div>
         </div>
       </div>
     </div>
-    <div>
+    <div class="container">
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
@@ -103,11 +119,19 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a
+              href="contact.html"
+              class="btn btn-branding"
+              title="Contact Kat Górzyńska"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:gorzynska.kat@gmail.com" class="email-link"
+          <a
+            href="mailto:gorzynska.kat@gmail.com"
+            class="email-link"
+            title="Email Kat Górzyńska"
             >gorzynska.kat@gmail.com</a
           >
         </div>
@@ -115,15 +139,30 @@
           <a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="https://github.com/katgorzynska" target="_blank"
+          <a
+            href="https://github.com/katgorzynska"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/kittyjagger/" target="_blank"
+          <a
+            href="https://www.instagram.com/kittyjagger/"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Kat Górzyńska and it is
+          <a
+            href="https://github.com/katgorzynska/portfolio-project"
+            targer="_blank"
+            >open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
