--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="src/logo.png"
             class="logo d-none d-md-block"
@@ -50,16 +50,16 @@
         </a>
         <ul>
           <li class="active">
-            <a href="index.html">Home</a>
+            <a href="index.html" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="about.html" title="About Kat Górzyńska">About</a>
           </li>
           <li>
-            <a href="work.html">Work</a>
+            <a href="work.html" title="Kat Górzyńska's work">Work</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html" title="Contact Kat Górzyńska">Contact</a>
           </li>
         </ul>
       </nav>
@@ -94,7 +94,7 @@
             </p>
             <div class="mt-5">
               <a
-                href="#"
+                href="work.html"
                 class="btn btn-branding-outline"
                 title="Yogurt project"
                 >Learn more</a
@@ -114,7 +114,10 @@
               minima fugiat explicabo eum dolore.
             </p>
 
-            <a href="#" class="btn btn-branding-outline" title="Weather project"
+            <a
+              href="work.html"
+              class="btn btn-branding-outline"
+              title="Weather project"
               >Learn more</a
             >
           </div>
@@ -141,7 +144,7 @@
               minima fugiat explicabo eum dolore.
             </p>
             <a
-              href="#"
+              href="work.html"
               class="btn btn-branding-outline"
               title="Dictionary project"
               >Learn more</a
@@ -156,11 +159,19 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a
+              href="contact.html"
+              class="btn btn-branding"
+              title="Contact Kat Górzyńska"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:gorzynska.kat@gmail.com" class="email-link"
+          <a
+            href="mailto:gorzynska.kat@gmail.com"
+            class="email-link"
+            title="Email Kat Górzyńska"
             >gorzynska.kat@gmail.com</a
           >
         </div>
@@ -168,15 +179,30 @@
           <a
             href="https://www.linkedin.com/in/katarzyna-g%C3%B3rzy%C5%84ska-8908b5145/"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="https://github.com/katgorzynska" target="_blank"
+          <a
+            href="https://github.com/katgorzynska"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/kittyjagger/" target="_blank"
+          <a
+            href="https://www.instagram.com/kittyjagger/"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Kat Górzyńska and it is
+          <a
+            href="https://github.com/katgorzynska/portfolio-project"
+            targer="_blank"
+            >open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
